// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutSharedHeader renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR eFnhMc"
    >
      <div
        class="sc-fqkvVR iaJAEY"
      >
        <div
          class="sc-fqkvVR sc-jXbUNg fRUuKs gdCncd"
        >
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-c1d0c577-0 aZqjs djyvKT iAkSYx iDmxzF"
          >
            <div
              class="sc-fqkvVR sc-kAyceB aZqjs kKfJVM"
            >
              <h1
                class="sc-kpDqfm bwvKSZ"
              >
                <span
                  class="sc-dAlyuH bBYhJg"
                >
                  TESTING_TITLE
                </span>
              </h1>
              <p
                class="sc-dLMFU bZDhnu"
              >
                TESTING_CONTENT
              </p>
            </div>
          </div>
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-c1d0c577-1 aZqjs joHkzz dGlNMa kQaWKe"
          >
            <div
              class="sc-fqkvVR eAnxgr"
            >
              <img
                alt="Oak logo"
                class="sc-dcJsrY jRtmJB"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="http://example.com/image.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AboutSharedHeader renders correctly with loop illustration 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR eFnhMc"
    >
      <div
        class="sc-fqkvVR iaJAEY"
      >
        <div
          class="sc-fqkvVR sc-jXbUNg fRUuKs gdCncd"
        >
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-c1d0c577-0 aZqjs djyvKT iAkSYx iDmxzF"
          >
            <div
              class="sc-fqkvVR sc-kAyceB aZqjs kKfJVM"
            >
              <h1
                class="sc-kpDqfm bwvKSZ"
              >
                <span
                  class="sc-dAlyuH bBYhJg"
                >
                  TESTING_TITLE
                </span>
              </h1>
              <p
                class="sc-dLMFU bZDhnu"
              >
                TESTING_CONTENT
              </p>
            </div>
          </div>
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-c1d0c577-1 aZqjs joHkzz dGlNMa kQaWKe"
          >
            <div
              class="sc-fqkvVR dbPreQ sc-c1d0c577-2 hXpMyI"
              data-testid="about-shared-loop"
            >
              <img
                alt=""
                class="sc-dcJsrY cDKKvZ"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1740665310/OWA/ui-graphics/looping-line-5_vdknco.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
